// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WalletBalanceCard snapshot > with error renders alert 1`] = `
<div>
  <div
    class="MuiBox-root css-wul4wz"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-8lc9nw-MuiPaper-root-MuiAccordion-root"
      style="--Paper-shadow: var(--jumper-shadows-1); --Paper-overlay: var(--jumper-overlays-1);"
    >
      <h3
        class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
      >
        <div
          aria-expanded="true"
          class="MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters css-usb5t6"
          focusvisibleclassname="Mui-focusVisible"
        >
          <span
            class="MuiAccordionSummary-content Mui-expanded css-yfrx4k-MuiAccordionSummary-content"
          >
            <div
              class="MuiBox-root css-dcu3ri"
            >
              <div
                class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-s4bmt1-MuiContainer-root"
              >
                <div
                  class="MuiBox-root css-1vocpx"
                >
                  <span
                    class="MuiBadge-root css-vo210k-MuiBadge-root"
                  >
                    <div
                      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-4ydead-MuiAvatar-root"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-piyikp-MuiSkeleton-root"
                        style="width: 40px; height: 40px;"
                      />
                    </div>
                    <span
                      class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightCircular MuiBadge-overlapCircular css-13qhmtj-MuiBadge-badge"
                    />
                  </span>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeSmall MuiButton-colorPrimary css-1e40vs5-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-bodyMediumStrong css-1isabjp-MuiTypography-root"
                    >
                      0x12345...67890
                    </p>
                  </button>
                </div>
                <div
                  class="MuiStack-root css-kh907h-MuiStack-root"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-wf63va-MuiButtonBase-root-MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1d0ztq2-MuiSvgIcon-root"
                      data-testid="OpenInNewIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
                      />
                    </svg>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-wf63va-MuiButtonBase-root-MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1d0ztq2-MuiSvgIcon-root"
                      data-testid="ReceiptLongIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19.5 3.5 18 2l-1.5 1.5L15 2l-1.5 1.5L12 2l-1.5 1.5L9 2 7.5 3.5 6 2v14H3v3c0 1.66 1.34 3 3 3h12c1.66 0 3-1.34 3-3V2zM19 19c0 .55-.45 1-1 1s-1-.45-1-1v-3H8V5h11z"
                      />
                      <path
                        d="M9 7h6v2H9zm7 0h2v2h-2zm-7 3h6v2H9zm7 0h2v2h-2z"
                      />
                    </svg>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1f8ih3t-MuiButtonBase-root-MuiIconButton-root"
                    id="disconnect-wallet-button"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1d0ztq2-MuiSvgIcon-root"
                      data-testid="PowerSettingsNewIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M13 3h-2v10h2zm4.83 2.17-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-s4bmt1-MuiContainer-root"
              >
                <div
                  class="MuiStack-root css-16ml5pn-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-bodyXSmallStrong css-1o3lrdt-MuiTypography-root"
                  >
                    navbar.walletMenu.walletBalance
                  </p>
                  <div
                    class="MuiStack-root css-1iw8hzp-MuiStack-root"
                  >
                    <div
                      class="MuiStack-root css-6y1ufm-MuiStack-root"
                    >
                      <div
                        class="css-1l8j7hy"
                      >
                        <span>
                          0
                        </span>
                      </div>
                      <button
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1ca0mjw-MuiButtonBase-root-MuiIconButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <div
                          aria-label="navbar.walletMenu.totalBalanceRefresh"
                          class="MuiBox-root css-r2eaa2"
                          data-mui-internal-clone-element="true"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-w1g9nl-MuiSvgIcon-root"
                            data-testid="RefreshIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
                            />
                          </svg>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </h3>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
          >
            <div
              class="MuiAccordion-region css-at4ued-MuiAccordion-region"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root css-1dwkzq1-MuiAccordionDetails-root"
              >
                <div
                  class="MuiBox-root css-dcu3ri"
                >
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-4lfm89-MuiDivider-root"
                  />
                  <div
                    class="MuiStack-root css-nen11g-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-5gjva7"
                    >
                      <div
                        class="MuiBox-root css-zgl2zz"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1lldh1y-MuiSvgIcon-root"
                          data-testid="ErrorRoundedIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 11c-.55 0-1-.45-1-1V8c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1m1 4h-2v-2h2z"
                          />
                        </svg>
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-lvvsd-MuiTypography-root"
                        >
                          Failed to load balances
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletBalanceCard snapshot > without error renders normally 1`] = `
<div>
  <div
    class="MuiBox-root css-wul4wz"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-8lc9nw-MuiPaper-root-MuiAccordion-root"
      style="--Paper-shadow: var(--jumper-shadows-1); --Paper-overlay: var(--jumper-overlays-1);"
    >
      <h3
        class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
      >
        <div
          aria-expanded="true"
          class="MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters css-usb5t6"
          focusvisibleclassname="Mui-focusVisible"
        >
          <span
            class="MuiAccordionSummary-content Mui-expanded css-yfrx4k-MuiAccordionSummary-content"
          >
            <div
              class="MuiBox-root css-dcu3ri"
            >
              <div
                class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-s4bmt1-MuiContainer-root"
              >
                <div
                  class="MuiBox-root css-1vocpx"
                >
                  <span
                    class="MuiBadge-root css-vo210k-MuiBadge-root"
                  >
                    <div
                      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-4ydead-MuiAvatar-root"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-piyikp-MuiSkeleton-root"
                        style="width: 40px; height: 40px;"
                      />
                    </div>
                    <span
                      class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightCircular MuiBadge-overlapCircular css-13qhmtj-MuiBadge-badge"
                    />
                  </span>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeSmall MuiButton-colorPrimary css-1e40vs5-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-bodyMediumStrong css-1isabjp-MuiTypography-root"
                    >
                      0x12345...67890
                    </p>
                  </button>
                </div>
                <div
                  class="MuiStack-root css-kh907h-MuiStack-root"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-wf63va-MuiButtonBase-root-MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1d0ztq2-MuiSvgIcon-root"
                      data-testid="OpenInNewIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
                      />
                    </svg>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-wf63va-MuiButtonBase-root-MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1d0ztq2-MuiSvgIcon-root"
                      data-testid="ReceiptLongIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19.5 3.5 18 2l-1.5 1.5L15 2l-1.5 1.5L12 2l-1.5 1.5L9 2 7.5 3.5 6 2v14H3v3c0 1.66 1.34 3 3 3h12c1.66 0 3-1.34 3-3V2zM19 19c0 .55-.45 1-1 1s-1-.45-1-1v-3H8V5h11z"
                      />
                      <path
                        d="M9 7h6v2H9zm7 0h2v2h-2zm-7 3h6v2H9zm7 0h2v2h-2z"
                      />
                    </svg>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1f8ih3t-MuiButtonBase-root-MuiIconButton-root"
                    id="disconnect-wallet-button"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1d0ztq2-MuiSvgIcon-root"
                      data-testid="PowerSettingsNewIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M13 3h-2v10h2zm4.83 2.17-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-s4bmt1-MuiContainer-root"
              >
                <div
                  class="MuiStack-root css-16ml5pn-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-bodyXSmallStrong css-1o3lrdt-MuiTypography-root"
                  >
                    navbar.walletMenu.walletBalance
                  </p>
                  <div
                    class="MuiStack-root css-1iw8hzp-MuiStack-root"
                  >
                    <div
                      class="MuiStack-root css-6y1ufm-MuiStack-root"
                    >
                      <div
                        class="css-1l8j7hy"
                      >
                        <span>
                          0
                        </span>
                      </div>
                      <button
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1ca0mjw-MuiButtonBase-root-MuiIconButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <div
                          aria-label="navbar.walletMenu.totalBalanceRefresh"
                          class="MuiBox-root css-r2eaa2"
                          data-mui-internal-clone-element="true"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-w1g9nl-MuiSvgIcon-root"
                            data-testid="RefreshIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
                            />
                          </svg>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </h3>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
          >
            <div
              class="MuiAccordion-region css-at4ued-MuiAccordion-region"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root css-1dwkzq1-MuiAccordionDetails-root"
              >
                <div
                  class="MuiBox-root css-dcu3ri"
                >
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-4lfm89-MuiDivider-root"
                  />
                  <div
                    class="MuiStack-root css-nen11g-MuiStack-root"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-lkocyo-MuiPaper-root-MuiAccordion-root"
                      style="--Paper-shadow: var(--jumper-shadows-1); --Paper-overlay: var(--jumper-overlays-1);"
                    >
                      <h3
                        class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
                      >
                        <button
                          aria-expanded="false"
                          class="MuiButtonBase-root MuiAccordionSummary-root css-406cw6-MuiButtonBase-root-MuiAccordionSummary-root"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiAccordionSummary-content css-18x5eyn-MuiAccordionSummary-content"
                          >
                            <div
                              class="MuiStack-root css-1whz3z4-MuiStack-root"
                            >
                              <div
                                class="MuiBox-root css-1hq6w3b"
                              >
                                <div
                                  class="MuiBox-root css-wioyy2"
                                >
                                  <div
                                    class="MuiBox-root css-1xdhyk6"
                                  >
                                    <div
                                      class="MuiStack-root css-8lrfwp-MuiStack-root"
                                    >
                                      <div
                                        class="MuiStack-root css-54t7xt-MuiStack-root"
                                      >
                                        <div
                                          class="MuiAvatar-root MuiAvatar-circular css-xq7m3c-MuiAvatar-root"
                                        >
                                          <img
                                            alt="USD Coin"
                                            class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
                                            loading="lazy"
                                            src="https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="MuiBox-root css-fxacz8"
                                >
                                  <p
                                    class="MuiTypography-root MuiTypography-bodySmallStrong css-ck7yql-MuiTypography-root"
                                    data-testid="entity-stack-title"
                                  >
                                    USDC
                                  </p>
                                  <div
                                    class="MuiStack-root css-8lrfwp-MuiStack-root"
                                  >
                                    <div
                                      class="MuiStack-root css-dnapf8-MuiStack-root"
                                    >
                                      <div
                                        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-i19px6-MuiAvatar-root"
                                      >
                                        <p
                                          class="MuiTypography-root MuiTypography-body1 css-1rcwuno-MuiTypography-root"
                                        >
                                          P
                                        </p>
                                      </div>
                                      <div
                                        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-i19px6-MuiAvatar-root"
                                      >
                                        <p
                                          class="MuiTypography-root MuiTypography-body1 css-1rcwuno-MuiTypography-root"
                                        >
                                          E
                                        </p>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="MuiBox-root css-19josn"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-bodySmallStrong css-ck7yql-MuiTypography-root"
                                >
                                  $0.00
                                </p>
                                <p
                                  class="MuiTypography-root MuiTypography-bodyXXSmall css-1l48hti-MuiTypography-root"
                                >
                                  0
                                </p>
                              </div>
                            </div>
                          </span>
                        </button>
                      </h3>
                      <div
                        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
                        style="min-height: 0px;"
                      >
                        <div
                          class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                        >
                          <div
                            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                          >
                            <div
                              class="MuiAccordion-region css-at4ued-MuiAccordion-region"
                              role="region"
                            >
                              <div
                                class="MuiAccordionDetails-root css-1dwkzq1-MuiAccordionDetails-root"
                              >
                                <div
                                  class="MuiStack-root css-nen11g-MuiStack-root"
                                >
                                  <hr
                                    class="MuiDivider-root MuiDivider-fullWidth css-1pk5x0u-MuiDivider-root"
                                  />
                                  <div
                                    class="MuiStack-root css-2mffmj-MuiStack-root"
                                  >
                                    <div
                                      class="MuiBox-root css-1hq6w3b"
                                    >
                                      <div
                                        class="MuiBox-root css-wioyy2"
                                      >
                                        <div
                                          class="MuiBox-root css-1jlu52p"
                                        >
                                          <div
                                            class="MuiStack-root css-8lrfwp-MuiStack-root"
                                          >
                                            <div
                                              class="MuiStack-root css-54t7xt-MuiStack-root"
                                            >
                                              <div
                                                class="MuiAvatar-root MuiAvatar-circular css-d5qi8t-MuiAvatar-root"
                                              >
                                                <img
                                                  alt="USD Coin"
                                                  class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
                                                  loading="lazy"
                                                  src="https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                                                />
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                        <div
                                          class="MuiBox-root css-mtay44"
                                        >
                                          <div
                                            class="MuiStack-root css-8lrfwp-MuiStack-root"
                                          >
                                            <div
                                              class="MuiStack-root css-1x5pyaa-MuiStack-root"
                                            >
                                              <div
                                                class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1fuvsw5-MuiAvatar-root"
                                              >
                                                <p
                                                  class="MuiTypography-root MuiTypography-body1 css-1rcwuno-MuiTypography-root"
                                                >
                                                  E
                                                </p>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                      <div
                                        class="MuiBox-root css-vtfvnu"
                                      >
                                        <p
                                          class="MuiTypography-root MuiTypography-bodySmallStrong css-ck7yql-MuiTypography-root"
                                          data-testid="entity-stack-title"
                                        >
                                          USDC
                                        </p>
                                        <div
                                          class="MuiBox-root css-sq6w4p"
                                        >
                                          <p
                                            class="MuiTypography-root MuiTypography-bodyXXSmall css-1l48hti-MuiTypography-root"
                                            data-testid="entity-stack-hint"
                                            style="position: absolute; transform: none; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
                                          >
                                            Eth
                                          </p>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      class="MuiBox-root css-1wwrdzw"
                                    >
                                      <p
                                        class="MuiTypography-root MuiTypography-bodySmallStrong css-ck7yql-MuiTypography-root"
                                      >
                                        format.currency
                                      </p>
                                      <p
                                        class="MuiTypography-root MuiTypography-bodyXXSmall css-1l48hti-MuiTypography-root"
                                      >
                                        format.decimal USDC
                                      </p>
                                    </div>
                                  </div>
                                  <div
                                    class="MuiStack-root css-2mffmj-MuiStack-root"
                                  >
                                    <div
                                      class="MuiBox-root css-1hq6w3b"
                                    >
                                      <div
                                        class="MuiBox-root css-wioyy2"
                                      >
                                        <div
                                          class="MuiBox-root css-1jlu52p"
                                        >
                                          <div
                                            class="MuiStack-root css-8lrfwp-MuiStack-root"
                                          >
                                            <div
                                              class="MuiStack-root css-54t7xt-MuiStack-root"
                                            >
                                              <div
                                                class="MuiAvatar-root MuiAvatar-circular css-d5qi8t-MuiAvatar-root"
                                              >
                                                <img
                                                  alt="USD Coin"
                                                  class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
                                                  loading="lazy"
                                                  src="https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                                                />
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                        <div
                                          class="MuiBox-root css-mtay44"
                                        >
                                          <div
                                            class="MuiStack-root css-8lrfwp-MuiStack-root"
                                          >
                                            <div
                                              class="MuiStack-root css-1x5pyaa-MuiStack-root"
                                            >
                                              <div
                                                class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1fuvsw5-MuiAvatar-root"
                                              >
                                                <p
                                                  class="MuiTypography-root MuiTypography-body1 css-1rcwuno-MuiTypography-root"
                                                >
                                                  P
                                                </p>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                      <div
                                        class="MuiBox-root css-vtfvnu"
                                      >
                                        <p
                                          class="MuiTypography-root MuiTypography-bodySmallStrong css-ck7yql-MuiTypography-root"
                                          data-testid="entity-stack-title"
                                        >
                                          USDC
                                        </p>
                                        <div
                                          class="MuiBox-root css-sq6w4p"
                                        >
                                          <p
                                            class="MuiTypography-root MuiTypography-bodyXXSmall css-1l48hti-MuiTypography-root"
                                            data-testid="entity-stack-hint"
                                            style="position: absolute; transform: none; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
                                          >
                                            Pol
                                          </p>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      class="MuiBox-root css-1wwrdzw"
                                    >
                                      <p
                                        class="MuiTypography-root MuiTypography-bodySmallStrong css-ck7yql-MuiTypography-root"
                                      >
                                        format.currency
                                      </p>
                                      <p
                                        class="MuiTypography-root MuiTypography-bodyXXSmall css-1l48hti-MuiTypography-root"
                                      >
                                        format.decimal USDC
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
